--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,12 @@
             "role": "Contractor @ Rollbar, Inc."
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/rodrigolinsr/rollbar-php"
+        }
+    ],
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0|^11.0|^12.0",
