--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0|^11.0|^12.0",
-        "rollbar/rollbar": "^v4.1.4"
+        "rollbar/rollbar": "dev-master"
     },
     "require-dev": {
         "orchestra/testbench": "^8.0",
